--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -55,7 +55,7 @@
                      readonly
               >
               <div
-                *ngIf="quickQuoteForm?.get('clientName').hasError('email') && quickQuoteForm?.get('clientName').touched && !newClient"
+                *ngIf="quickQuoteForm?.get('clientName')?.hasError('email') && quickQuoteForm?.get('clientName').touched && !newClient"
                 class="form-text text-danger">
                 {{ 'gis.quotation.client_is_required' | translate }}
               </div>
@@ -72,7 +72,7 @@
                    formControlName="emailAddress"
             >
             <div
-              *ngIf="quickQuoteForm?.get('emailAddress').hasError('email') && quickQuoteForm?.get('emailAddress').touched"
+              *ngIf="quickQuoteForm?.get('emailAddress')?.hasError('email') && quickQuoteForm?.get('emailAddress').touched"
               class="form-text text-danger">
               {{ 'gis.quotation.invalid_email_address' | translate }}
             </div>
@@ -95,7 +95,7 @@
                                 [numberFormat]="PhoneNumberFormat.National" formControlName="phoneNumber">
             </ngx-intl-tel-input>
               <div
-                *ngIf="quickQuoteForm?.get('phoneNumber').hasError('validatePhoneNumber') && quickQuoteForm?.get('phoneNumber').touched"
+                *ngIf="quickQuoteForm?.get('phoneNumber')?.hasError('validatePhoneNumber') && quickQuoteForm?.get('phoneNumber').touched"
                 class="form-text text-danger">
                 {{ 'gis.quotation.invalid_phone_format' | translate }}
               </div>
@@ -113,7 +113,7 @@
                           placeholder=" " [filterBy]="'description'"
                           [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
               <div
-                *ngIf="quickQuoteForm?.get('product').hasError('required') && quickQuoteForm?.get('product').touched"
+                *ngIf="quickQuoteForm?.get('product')?.hasError('required') && quickQuoteForm?.get('product').touched"
                 class="form-text text-danger">
                 {{ 'gis.quotation.product_is_required' | translate }}
               </div>
@@ -130,7 +130,7 @@
                           placeholder=" " [filterBy]="'description'"
                           [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
               <div
-                *ngIf="quickQuoteForm?.get('subClass').hasError('required') && quickQuoteForm?.get('subClass').touched"
+                *ngIf="quickQuoteForm?.get('subClass')?.hasError('required') && quickQuoteForm?.get('subClass').touched"
                 class="form-text text-danger">
                 {{ 'gis.policy.subclass_is_required' | translate }}
               </div>
@@ -148,7 +148,7 @@
                           optionLabel="name" [dataKey]="'id'"
                           [filterBy]="'name'" [filter]="true" ></p-dropdown>
               <div
-                *ngIf="quickQuoteForm?.get('currency').hasError('required') && quickQuoteForm?.get('currency').touched"
+                *ngIf="quickQuoteForm?.get('currency')?.hasError('required') && quickQuoteForm?.get('currency').touched"
                 class="form-text text-danger">
                 {{ 'gis.policy.currency_is_required' | translate }}
               </div>
@@ -168,7 +168,7 @@
                           [placeholder]="" [minDate]="minDate">
               </p-calendar>
               <div
-                *ngIf="quickQuoteForm?.get('effectiveDate').hasError('required') && quickQuoteForm?.get('effectiveDate').touched"
+                *ngIf="quickQuoteForm?.get('effectiveDate')?.hasError('required') && quickQuoteForm?.get('effectiveDate').touched"
                 class="form-text text-danger">
                 {{ 'gis.quotation.effective_date_is_required' | translate }}
               </div>
@@ -227,12 +227,12 @@
                   </ng-container>
                 </div>
                 <div
-                  *ngIf="quickQuoteForm?.get(field.name).hasError('required') && quickQuoteForm?.get(field.name).touched"
+                  *ngIf="quickQuoteForm?.get(field.name)?.hasError('required') && quickQuoteForm?.get(field.name).touched"
                   class="form-text text-danger">
                   {{ field.label }} is required
                 </div>
                 <div
-                  *ngIf="quickQuoteForm?.get(field.name).hasError('pattern') && quickQuoteForm?.get(field.name).touched"
+                  *ngIf="quickQuoteForm?.get(field.name)?.hasError('pattern') && quickQuoteForm?.get(field.name).touched"
                   class="form-text text-danger">
                   {{ field.label }} is invalid
                 </div>
