--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -38,7 +38,6 @@
               }}</label>
             <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
                    formControlName="clientName"
-                   [disabled]="isFieldDisabled('other')"
                    (blur)="onInputChange()"
             >
           </div>
@@ -50,7 +49,6 @@
                 }}</label>
               <input type="text" formControlName="clientName" id="quote-input"
                      class="form-select form-control form-control-sm mb-1"
-                     [disabled]="isFieldDisabled('other')"
                      data-bs-toggle="modal"
                      data-bs-target="#clientModal"
                      readonly
@@ -69,7 +67,6 @@
                   translate
               }}</label>
             <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
-                   [disabled]="isFieldDisabled('email')"
                    formControlName="emailAddress"
             >
             <div
@@ -189,7 +186,7 @@
                     <ng-container *ngSwitchCase="'text'">
                       <ng-container *ngIf="field.name==='carRegNo';else inputField">
                         <input type="text" id="quote-input" class="form-control form-control-sm"
-                               (input)="updateCarRegNoValue($event); validateCarRegNo(); transformToUpperCase($event)"
+                               (input)="validateCarRegNo(); transformToUpperCase($event)"
                                [formControlName]="field.name">
                       </ng-container>
                       <ng-template #inputField>
@@ -238,6 +235,10 @@
                   *ngIf="quickQuoteForm?.get(field.name)?.hasError('pattern') && quickQuoteForm?.get(field.name).touched"
                   class="form-text text-danger">
                   {{ field.label }} is invalid
+                </div>
+                <div  *ngIf="field.name === 'carRegNo' && quickQuoteForm?.get(field.name)?.hasError('unique') && quickQuoteForm?.get(field.name).touched"
+                  class="form-text text-danger">
+                  {{ 'gis.quotation.this_property_id_is_duplicated' | translate }}
                 </div>
               </div>
 
@@ -336,8 +337,6 @@
               <td>{{ clientData.idNumber }}</td>
               <td>{{ clientData.pinNumber }}</td>
               <td>{{ clientData.id }}</td>
-
-
             </tr>
           </ng-template>
 
